Updated logo's on the about page to adapt correctly without stretching. Updated CHSS logo with custom "banner" style logo. Added padding to bottom of about page.

--- a/static/style.css
+++ b/static/style.css
@@ -97,3 +97,7 @@ background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg
     height: 100%;
     color: #808080;
 }
+
+.logo-container img {
+    max-height:110px;
+}
